--- a/MentalWellness/app/src/main/AndroidManifest.xml
+++ b/MentalWellness/app/src/main/AndroidManifest.xml
@@ -13,6 +13,15 @@
         android:theme="@style/Theme.Navbar"
         tools:targetApi="31">
         <activity
+            android:name=".activities.StressReliefActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activities.DepressionHelpActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activities.SleepAidActivity"
+            android:exported="false" />
+        <activity
             android:name=".ActivityTwo"
             android:exported="false" />
         <activity
