--- a/MentalWellness/app/src/main/AndroidManifest.xml
+++ b/MentalWellness/app/src/main/AndroidManifest.xml
@@ -18,6 +18,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MentalWellness"
+        android:networkSecurityConfig="@xml/network_security_config"
+        android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
             android:name="com.krishna.navbar.SplashActivity"
@@ -57,10 +59,6 @@
             android:name="com.krishna.navbar.ActivityTwo"
             android:exported="false" />
         <activity
-            android:name="com.krishna.navbar.ProfileActivity"
-            android:exported="false"
-            android:theme="@style/Theme.MentalWellness.NoActionBar" />
-        <activity
             android:name="com.krishna.navbar.TherapyActivity"
             android:exported="false"
             android:theme="@style/Theme.MentalWellness.NoActionBar" />
@@ -80,6 +78,19 @@
             android:name="com.krishna.navbar.StatisticsActivity"
             android:exported="false"
             android:theme="@style/Theme.MentalWellness.NoActionBar" />
+        <activity
+            android:name="com.krishna.navbar.utils.FirebaseDebugActivity"
+            android:exported="true"
+            android:label="Firebase Debug"
+            android:theme="@style/Theme.MentalWellness">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+
+        
+            
     </application>
 
 </manifest>
